# functions_pt3

./: README.md  dados.parquet  decorators.py  etl.py  ex0.py  logging_ex.py  pipeline.py  pyproject.toml
