[tool.poetry]
name = "aula9-bootcamp"
version = "0.1.0"
description = ""
authors = ["Lucas <lucas-mvs@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
pandas = "^2.2.3"
pandera = "^0.22.1"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
